--- a/bio.html
+++ b/bio.html
@@ -39,7 +39,7 @@
             </tr>
             <tr>
                 <td>Education</td>
-                <td>Bachelor of Engineering - BE, Computer Engineering (2022 - Present)</td>
+                <td>Bachelor of Engineering - BE, Computer Engineering (2022 - Ongoing)</td>
             </tr>
             <tr>
                 <td>School</td>
