--- a/bio.html
+++ b/bio.html
@@ -16,6 +16,7 @@
         </nav>
     </header>
     <main>
+        <center>
         <table border="1" cellspacing="0" cellpadding="5">
             <tr>
                 <th>Field</th>
@@ -50,6 +51,7 @@
                 <td>Programming, Computer Science, Debugging, Python, SQL, Data Visualization</td>
             </tr>
         </table>
+        </center>
     </main>
     <footer>
         <p>&copy; 2024 Amith A N. All rights reserved.</p>
